# cognitio

./: .eslintignore  .eslintrc.cjs  Makefile  README.md  package-lock.json  package.json  tailwind.config.js
logo/: logo.psd
src/: app.css  app.d.ts  app.html
src-cli/: Cargo.toml  cli_plan.txt
src-cli/src/: main.rs
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/lib/: Cards.svelte  CheatCard.svelte  Cheatsheet.css  Cheatsheet.svelte  Cheatsheets.svelte  CodeBlock.svelte  CodeTuple.svelte  CognitioFiles.svelte  Demo.svelte  Description.svelte  Menu.svelte  Subject.svelte  Subjects.svelte  Tooltip.svelte  markdown.ts  models.ts  patchHtml.ts  styles.ts
src/lib/components/: Cheatsheet.css  Cheatsheet.svelte  MarkdownContent.svelte  Menu copy.svelte  Menu.svelte  MenuSection.svelte  MenuSubItem.svelte  MenuSubSection.svelte  SectionHeader.svelte  Tooltip.svelte
src/lib/helpers/: copyButton.ts  cssUtils.ts  directoryUtils.ts  hashUtils.ts  marked.ts  patchHtml.ts  tauri.ts
src/lib/models/: index.ts  mapping.ts
src/lib/stores/: config.ts
src/routes/: +layout.svelte  +page.svelte
