[package]
name = "app"
version = "0.3.0"
description = "Developer cheatsheets and code snippets via Markdown."
authors = ["Eirik Årdal"]
license = ""
repository = "https://github.com/eaardal/cognitio"
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
serde_json = "1.0"
serde_yaml = "0.9"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4.0", features = ["shell-open"] }
notify = "6.0.1"
futures = "0.3"
log = "0.4"
log4rs = "1"
env_logger = "0.10"

# See note here: https://tauri.app/v1/guides/building/macos
[dependencies.fix-path-env]
git = "https://github.com/tauri-apps/fix-path-env-rs"
branch = "dev"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
